dcv/cdk.out/DcvStack.template.json
{
 "Resources": {
  "DcvWorkstationEFSSecurityGroupfromDcvStackDcvWorkstationSecurityGroupD3928B1A20496D8C8BB5": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "Description": "from DcvStackDcvWorkstationSecurityGroupD3928B1A:2049",
    "FromPort": 2049,
    "GroupId": "sg-12345678",
    "IpProtocol": "tcp",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "DcvWorkstationSecurityGroup4A30BFE6",
      "GroupId"
     ]
    },
    "ToPort": 2049
   },
   "Metadata": {
    "aws:cdk:path": "DcvStack/DcvWorkstation/EFSSecurityGroup/from DcvStackDcvWorkstationSecurityGroupD3928B1A:2049"
   }
  },
  "DcvWorkstationAutoVpc506BB4AC": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "DcvStack/DcvWorkstation/AutoVpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "DcvStack/DcvWorkstation/AutoVpc/Resource"
   }
  },
  "DcvWorkstationAutoVpcPublicSubnet1SubnetACCF27F3": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-west-2a",
    "CidrBlock": "10.0.0.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "DcvStack/DcvWorkstation/AutoVpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "DcvWorkstationAutoVpc506BB4AC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "DcvStack/DcvWorkstation/AutoVpc/PublicSubnet1/Subnet"
   }
  },
  "DcvWorkstationAutoVpcPublicSubnet1RouteTableDF0C3775": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "DcvStack/DcvWorkstation/AutoVpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "DcvWorkstationAutoVpc506BB4AC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "DcvStack/DcvWorkstation/AutoVpc/PublicSubnet1/RouteTable"
   }
  },
  "DcvWorkstationAutoVpcPublicSubnet1RouteTableAssociationA21A938A": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "DcvWorkstationAutoVpcPublicSubnet1RouteTableDF0C3775"
    },
    "SubnetId": {
     "Ref": "DcvWorkstationAutoVpcPublicSubnet1SubnetACCF27F3"
    }
   },
   "Metadata": {
    "aws:cdk:path": "DcvStack/DcvWorkstation/AutoVpc/PublicSubnet1/RouteTableAssociation"
   }
  },
  "DcvWorkstationAutoVpcPublicSubnet1DefaultRoute85FD7020": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "DcvWorkstationAutoVpcIGWE65A10F0"
    },
    "RouteTableId": {
     "Ref": "DcvWorkstationAutoVpcPublicSubnet1RouteTableDF0C3775"
    }
   },
   "DependsOn": [
    "DcvWorkstationAutoVpcVPCGW3EA2DE1B"
   ],
   "Metadata": {
    "aws:cdk:path": "DcvStack/DcvWorkstation/AutoVpc/PublicSubnet1/DefaultRoute"
   }
  },
  "DcvWorkstationAutoVpcPublicSubnet1EIP3000845C": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "DcvStack/DcvWorkstation/AutoVpc/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "DcvStack/DcvWorkstation/AutoVpc/PublicSubnet1/EIP"
   }
  },
  "DcvWorkstationAutoVpcPublicSubnet1NATGateway8F084D9D": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "DcvWorkstationAutoVpcPublicSubnet1EIP3000845C",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "DcvWorkstationAutoVpcPublicSubnet1SubnetACCF27F3"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "DcvStack/DcvWorkstation/AutoVpc/PublicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "DcvWorkstationAutoVpcPublicSubnet1DefaultRoute85FD7020",
    "DcvWorkstationAutoVpcPublicSubnet1RouteTableAssociationA21A938A"
   ],
   "Metadata": {
    "aws:cdk:path": "DcvStack/DcvWorkstation/AutoVpc/PublicSubnet1/NATGateway"
   }
  },
  "DcvWorkstationAutoVpcPublicSubnet2Subnet9830AB4B": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-west-2b",
    "CidrBlock": "10.0.1.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "DcvStack/DcvWorkstation/AutoVpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "DcvWorkstationAutoVpc506BB4AC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "DcvStack/DcvWorkstation/AutoVpc/PublicSubnet2/Subnet"
   }
  },
  "DcvWorkstationAutoVpcPublicSubnet2RouteTable5A26AA6A": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "DcvStack/DcvWorkstation/AutoVpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "DcvWorkstationAutoVpc506BB4AC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "DcvStack/DcvWorkstation/AutoVpc/PublicSubnet2/RouteTable"
   }
  },
  "DcvWorkstationAutoVpcPublicSubnet2RouteTableAssociationBF7CCE17": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "DcvWorkstationAutoVpcPublicSubnet2RouteTable5A26AA6A"
    },
    "SubnetId": {
     "Ref": "DcvWorkstationAutoVpcPublicSubnet2Subnet9830AB4B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "DcvStack/DcvWorkstation/AutoVpc/PublicSubnet2/RouteTableAssociation"
   }
  },
  "DcvWorkstationAutoVpcPublicSubnet2DefaultRoute8AE274BD": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "DcvWorkstationAutoVpcIGWE65A10F0"
    },
    "RouteTableId": {
     "Ref": "DcvWorkstationAutoVpcPublicSubnet2RouteTable5A26AA6A"
    }
   },
   "DependsOn": [
    "DcvWorkstationAutoVpcVPCGW3EA2DE1B"
   ],
   "Metadata": {
    "aws:cdk:path": "DcvStack/DcvWorkstation/AutoVpc/PublicSubnet2/DefaultRoute"
   }
  },
  "DcvWorkstationAutoVpcPrivateSubnet1Subnet73F0D939": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-west-2a",
    "CidrBlock": "10.0.2.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "DcvStack/DcvWorkstation/AutoVpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "DcvWorkstationAutoVpc506BB4AC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "DcvStack/DcvWorkstation/AutoVpc/PrivateSubnet1/Subnet"
   }
  },
  "DcvWorkstationAutoVpcPrivateSubnet1RouteTable9A2B32B4": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "DcvStack/DcvWorkstation/AutoVpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "DcvWorkstationAutoVpc506BB4AC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "DcvStack/DcvWorkstation/AutoVpc/PrivateSubnet1/RouteTable"
   }
  },
  "DcvWorkstationAutoVpcPrivateSubnet1RouteTableAssociation0A85B418": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "DcvWorkstationAutoVpcPrivateSubnet1RouteTable9A2B32B4"
    },
    "SubnetId": {
     "Ref": "DcvWorkstationAutoVpcPrivateSubnet1Subnet73F0D939"
    }
   },
   "Metadata": {
    "aws:cdk:path": "DcvStack/DcvWorkstation/AutoVpc/PrivateSubnet1/RouteTableAssociation"
   }
  },
  "DcvWorkstationAutoVpcPrivateSubnet1DefaultRoute9258229C": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "DcvWorkstationAutoVpcPublicSubnet1NATGateway8F084D9D"
    },
    "RouteTableId": {
     "Ref": "DcvWorkstationAutoVpcPrivateSubnet1RouteTable9A2B32B4"
    }
   },
   "Metadata": {
    "aws:cdk:path": "DcvStack/DcvWorkstation/AutoVpc/PrivateSubnet1/DefaultRoute"
   }
  },
  "DcvWorkstationAutoVpcPrivateSubnet2Subnet6FDA9A76": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-west-2b",
    "CidrBlock": "10.0.3.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "DcvStack/DcvWorkstation/AutoVpc/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "DcvWorkstationAutoVpc506BB4AC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "DcvStack/DcvWorkstation/AutoVpc/PrivateSubnet2/Subnet"
   }
  },
  "DcvWorkstationAutoVpcPrivateSubnet2RouteTable663934DA": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "DcvStack/DcvWorkstation/AutoVpc/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "DcvWorkstationAutoVpc506BB4AC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "DcvStack/DcvWorkstation/AutoVpc/PrivateSubnet2/RouteTable"
   }
  },
  "DcvWorkstationAutoVpcPrivateSubnet2RouteTableAssociation2A9E1E60": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "DcvWorkstationAutoVpcPrivateSubnet2RouteTable663934DA"
    },
    "SubnetId": {
     "Ref": "DcvWorkstationAutoVpcPrivateSubnet2Subnet6FDA9A76"
    }
   },
   "Metadata": {
    "aws:cdk:path": "DcvStack/DcvWorkstation/AutoVpc/PrivateSubnet2/RouteTableAssociation"
   }
  },
  "DcvWorkstationAutoVpcPrivateSubnet2DefaultRoute8542C24E": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "DcvWorkstationAutoVpcPublicSubnet1NATGateway8F084D9D"
    },
    "RouteTableId": {
     "Ref": "DcvWorkstationAutoVpcPrivateSubnet2RouteTable663934DA"
    }
   },
   "Metadata": {
    "aws:cdk:path": "DcvStack/DcvWorkstation/AutoVpc/PrivateSubnet2/DefaultRoute"
   }
  },
  "DcvWorkstationAutoVpcIGWE65A10F0": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "DcvStack/DcvWorkstation/AutoVpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "DcvStack/DcvWorkstation/AutoVpc/IGW"
   }
  },
  "DcvWorkstationAutoVpcVPCGW3EA2DE1B": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "DcvWorkstationAutoVpcIGWE65A10F0"
    },
    "VpcId": {
     "Ref": "DcvWorkstationAutoVpc506BB4AC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "DcvStack/DcvWorkstation/AutoVpc/VPCGW"
   }
  },
  "DcvWorkstationInstanceRole47A48FFC": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ec2.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "ManagedPolicyArns": [
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/AmazonS3ReadOnlyAccess"
       ]
      ]
     },
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/AmazonSSMManagedInstanceCore"
       ]
      ]
     },
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/AmazonEC2ContainerRegistryPowerUser"
       ]
      ]
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "DcvStack/DcvWorkstation/InstanceRole/Resource"
   }
  },
  "DcvWorkstationSecurityGroup4A30BFE6": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Allow DCV and TensorBoard access",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow Amazon DCV access",
      "FromPort": 8443,
      "IpProtocol": "tcp",
      "ToPort": 8443
     },
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow TensorBoard access",
      "FromPort": 6006,
      "IpProtocol": "tcp",
      "ToPort": 6006
     }
    ],
    "VpcId": {
     "Ref": "DcvWorkstationAutoVpc506BB4AC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "DcvStack/DcvWorkstation/SecurityGroup/Resource"
   }
  },
  "DcvWorkstationInstanceInstanceProfile88980078": {
   "Type": "AWS::IAM::InstanceProfile",
   "Properties": {
    "Roles": [
     {
      "Ref": "DcvWorkstationInstanceRole47A48FFC"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "DcvStack/DcvWorkstation/Instance/InstanceProfile"
   }
  },
  "DcvWorkstationInstance23BF9800": {
   "Type": "AWS::EC2::Instance",
   "Properties": {
    "AvailabilityZone": "us-west-2a",
    "BlockDeviceMappings": [
     {
      "DeviceName": "/dev/sda1",
      "Ebs": {
       "DeleteOnTermination": true,
       "VolumeSize": 100
      }
     }
    ],
    "IamInstanceProfile": {
     "Ref": "DcvWorkstationInstanceInstanceProfile88980078"
    },
    "ImageId": "ami-0ffde298a37fd43b7",
    "InstanceType": "g6.4xlarge",
    "SecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "DcvWorkstationSecurityGroup4A30BFE6",
       "GroupId"
      ]
     }
    ],
    "SubnetId": {
     "Ref": "DcvWorkstationAutoVpcPublicSubnet1SubnetACCF27F3"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "DcvStack/DcvWorkstation/Instance"
     }
    ],
    "UserData": {
     "Fn::Base64": "#!/bin/bash\n#!/bin/bash\n# Bootstrap script for Amazon DCV on Ubuntu 22.04 with IsaacLab and EFS\n# - Robust logging to /var/log/dcv-bootstrap.log and concise step summary\n# - Retries for apt and network operations\n# - Non-fatal GUI tweaks; separation of critical vs optional steps\n#\n# USAGE GUIDE (read this if something failed)\n# ============================================================\n# Where to look:\n#   - Summary (quick, one line per step): /var/log/dcv-bootstr [...]
    }
   },
   "DependsOn": [
    "DcvWorkstationInstanceRole47A48FFC"
   ],
   "Metadata": {
    "aws:cdk:path": "DcvStack/DcvWorkstation/Instance/Resource"
   }
  },
  "DcvWorkstationEIP9E73AD81": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc"
   },
   "Metadata": {
    "aws:cdk:path": "DcvStack/DcvWorkstation/EIP"
   }
  },
  "DcvWorkstationEIPAssociationB7706545": {
   "Type": "AWS::EC2::EIPAssociation",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "DcvWorkstationEIP9E73AD81",
      "AllocationId"
     ]
    },
    "InstanceId": {
     "Ref": "DcvWorkstationInstance23BF9800"
    }
   },
   "Metadata": {
    "aws:cdk:path": "DcvStack/DcvWorkstation/EIPAssociation"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/11QQW6DQAx8S+7LtqGHqMcIRRGXdgVVrpXZmsYNeNGutwgh/l4hktD2NOPR2Jpxqre7nX7cQB8S+3FJGqr0WArYiyowuOgtKujD+4g21WNWc4k2epLh6F3scv70GII6dVZlNZ9MpkysGrJlrBhl1lZWuCj4BlWDq75q+xCcJRByfDfP5JCbGV5AjiDYw6CMp28QXA/nLOgZ74YlyXXai4A9t8ii/kRX/7uonIMAW1xOrvyQm1/hJkXQ6rFwS40b3haMdzU1OE2z+Bqli0v36y8nZQY5O3540ttUP2++AlHiIwu1qIsFfwDjoZSkkwEAAA=="
   },
   "Metadata": {
    "aws:cdk:path": "DcvStack/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "DcvWorkstationInstancePublicIP74ACCF7D": {
   "Description": "Public IP address of the DCV instance",
   "Value": {
    "Ref": "DcvWorkstationEIP9E73AD81"
   }
  },
  "DcvWorkstationDCVWebURL808DCE7E": {
   "Description": "DCV web client URL",
   "Value": {
    "Fn::Join": [
     "",
     [
      "https://",
      {
       "Ref": "DcvWorkstationEIP9E73AD81"
      },
      ":8443"
     ]
    ]
   }
  },
  "DcvWorkstationDCVCredentialsD77ED287": {
   "Description": "DCV login credentials",
   "Value": "Username: ubuntu, Password: dcv211125451583"
  },
  "DcvWorkstationInstanceId005EAE5A": {
   "Description": "EC2 Instance ID for SSM access",
   "Value": {
    "Ref": "DcvWorkstationInstance23BF9800"
   }
  },
  "VpcId": {
   "Description": "VPC ID where DCV workstation is deployed",
   "Value": {
    "Ref": "DcvWorkstationAutoVpc506BB4AC"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
